--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "mongoose": "^7.6.1",
     "morgan": "^1.10.0",
     "node": "^20.7.0",
     "nodemon": "^3.0.1",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "name": "login",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js",
     "dev": "nodemon app.js"
   },
   "keywords": [],
